# point_spreads

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: python-project.md  python-project.metadata.json  python.mdc
.github/: dependabot.yml
.github/workflows/: actionlint.yml  ci.yml
data/other_sources/: ncaa-basketball-2007-08.xlsx  ncaa-basketball-2008-09.xlsx  ncaa-basketball-2009-10.xlsx  ncaa-basketball-2010-11.xlsx  prediction_tracker_2003_2010.csv
src/covers_spreads/: __init__.py  main.py
src/point_spreads/: covers_parser.py  main.py  multi_parser.py  settings.py
tests/: test_covers_analytics.py  test_spread_analytics.py
