[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "point-spreads"
version = "0.1.0"
description = "Historical data of college basketball spreads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.4",
]

[project.scripts]
point-spreads = "point_spreads.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["point_spreads"]

[tool.ruff]
# Simple core rules: errors, warnings, imports and basic style
lint.select = ["E", "F", "I", "W"]

# Allow autofix
lint.fixable = ["ALL"]
line-length = 120
target-version = "py313"

# Enable auto-formatting
format.quote-style = "double"
format.indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.mypy_cache",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownLambdaType = true
reportUntypedFunctionDecorator = true
